--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -55,6 +55,7 @@ input[type=number] {
 }
 .cart-container {
     position: relative;
+    bottom:  0;
     display: inline-block;
 }
 
@@ -62,7 +63,7 @@ input[type=number] {
 .cart-icon {
     width: 50px;
     height: 50px;
-    background-color: #3498db;
+    background-color: #45a049;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -77,11 +78,13 @@ input[type=number] {
     position: absolute;
     top: 0;
     right: 0;
+    transform: translate(25%, -25%);
     background-color: #e74c3c;
     color: #ffffff;
-    padding: 4px 8px;
+    padding:  8px;
     border-radius: 50%;
-    font-size: 12px;
+    font-size: 14px;
+    font-weight: bolder;
 }
 .delete-button {
     background-color: #e74c3c;
